// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`cutsom > custom component case 0 1`] = `
".ice-subtitle {
  @apply text-gray-600 text-sm pt-5 pb-4;
}"
`;

exports[`cutsom > custom component case 1 1`] = `
{
  "subtitle": {
    "base": {},
    "styled": {},
    "utils": {
      ".ice-subtitle": {
        "--tw-text-opacity": "1",
        "color": "rgb(75 85 99 / var(--tw-text-opacity))",
        "fontSize": "0.875rem",
        "lineHeight": "1.25rem",
        "paddingBottom": "1rem",
        "paddingTop": "1.25rem",
      },
    },
  },
  "tips": {
    "base": {},
    "styled": {},
    "utils": {
      ".som-tips": {
        "--tw-text-opacity": "1",
        "color": "rgb(107 114 128 / var(--tw-text-opacity))",
        "fontSize": "0.75rem",
        "lineHeight": "1rem",
        "paddingBottom": "0.5rem",
        "paddingTop": "0.75rem",
      },
    },
  },
}
`;

exports[`cutsom > custom component case 2 1`] = `
{
  "checkbox": {
    "base": {
      ".ice-checkbox .wx-checkbox-input": {
        "borderRadius": "50%",
        "height": "34rpx",
        "width": "34rpx",
      },
      ".ice-checkbox .wx-checkbox-input.wx-checkbox-input-checked": {
        "background": "#0394f0",
        "borderColor": "#0394f0",
      },
      ".ice-checkbox .wx-checkbox-input.wx-checkbox-input-checked::before": {
        "WebkitTransform": "translate(-50%, -50%) scale(1)",
        "background": "transparent",
        "color": "#fff",
        "fontSize": "22rpx",
        "height": "20rpx",
        "lineHeight": "20rpx",
        "textAlign": "center",
        "transform": "translate(-50%, -50%) scale(1)",
        "width": "20rpx",
      },
    },
    "styled": {},
    "utils": {},
  },
}
`;

exports[`cutsom > custom component case 3 1`] = `
{
  "xxx": {
    "base": {},
    "styled": {},
    "utils": {
      ".xxx": {
        "--tw-bg-opacity": "1",
        "backgroundColor": "rgb(252 165 165 / var(--tw-bg-opacity))",
        "color": "red",
        "fontSize": "0.875rem",
        "lineHeight": "1.25rem",
      },
    },
  },
}
`;

exports[`cutsom > custom component case 4 !important 1`] = `
{
  "xxx": {
    "base": {},
    "styled": {},
    "utils": {
      ".xxx": {
        "--tw-bg-opacity": "1",
        "backgroundColor": "rgb(252 165 165 / var(--tw-bg-opacity))",
        "color": "red",
        "fontSize": "0.875rem",
        "lineHeight": "1rem !important",
      },
    },
  },
}
`;

exports[`cutsom > custom component case 5 !important 1`] = `
{
  "xxx": {
    "base": {},
    "styled": {},
    "utils": {
      ".xxx": {
        "--tw-bg-opacity": "1 !important",
        "backgroundColor": "rgb(252 165 165 / var(--tw-bg-opacity)) !important",
        "color": "red !important",
        "fontSize": "0.875rem !important",
        "lineHeight": "1rem !important",
      },
    },
  },
}
`;

exports[`cutsom > custom component case 6 1`] = `
{
  "xxx": {
    "base": {
      ".xxx": {
        "--tw-bg-opacity": "1 !important",
        "backgroundColor": "rgb(252 165 165 / var(--tw-bg-opacity)) !important",
        "color": "red",
        "fontSize": "0.875rem !important",
        "lineHeight": "1rem !important",
      },
    },
    "styled": {},
    "utils": {},
  },
}
`;

exports[`cutsom > custom component case 7 1`] = `
{
  "xxx": {
    "base": {
      ".xxx": {
        "--tw-bg-opacity": "1 !important",
        "backgroundColor": "rgb(252 165 165 / var(--tw-bg-opacity)) !important",
        "color": "red",
        "fontSize": "0.875rem !important",
        "lineHeight": "1rem !important",
      },
    },
    "styled": {},
    "utils": {},
  },
}
`;
